--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://rahmatdial-prjct.github.io/portofolio"
+  "homepage": "https://rahmatdialtelkom.github.io/portofolio"
 }
